IMPALA-5756: start memory maintenance thread after metric creation

Daemons were sometimes crashing on startup if the memory maintenance
thread started running before the memory metrics were created.

This changes the startup sequence so that the thread is started
after the metrics are registered.

Change-Id: Ibb7337a68547b4d660f3100b04df2c20befb044c
Reviewed-on: http://gerrit.cloudera.org:8080/7573
Reviewed-by: Henry Robinson <henry@cloudera.com>
Tested-by: Impala Public Jenkins