be/src/catalog/catalogd-main.cc
@@ -72,6 +72,7 @@ int CatalogdMain(int argc, char** argv) {
 
   metrics->Init(FLAGS_enable_webserver ? webserver.get() : nullptr);
   ABORT_IF_ERROR(RegisterMemoryMetrics(metrics.get(), true, nullptr, nullptr));
+  StartMemoryMaintenanceThread();
   StartThreadInstrumentation(metrics.get(), webserver.get(), true);
 
   InitRpcEventTracing(webserver.get());
